gke/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-backend
  labels:
    app: booking-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-backend
  template:
    metadata:
      labels:
        app: booking-backend
    spec:
      containers:
      - name: backend
        image: us-west1-docker.pkg.dev/pivot-lab-2203/docker-image-repo/booking-backend:latest
        ports:
        - name: http
          containerPort: 8081
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /api/
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
