gke/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-backend-service
spec:
  selector:
    app: booking-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  clusterIP: None
