gke/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-frontend-service
spec:
  selector:
    app: booking-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: None
